// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarDropdown should render ToolbarDropdown 0: opened-dropdown--0 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle utils--components-dropdown-toggle"
        >
          <button
            aria-describedby={null}
            aria-expanded={true}
            aria-haspopup="true"
            aria-label="test label 0"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onClick={[Function]}
            tooltip="test label 0"
            type="button"
          >
            <span
              className="dashicon dashicons dashicons-admin-customizer"
            />
            <span
              className="components-dropdown-menu__indicator"
            />
          </button>
          <div
            className="components-popover components-dropdown__content components-dropdown-button__popover utils--components-dropdown-button__popover is-without-arrow"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
          >
            <div
              className="components-popover__content"
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <iframe
                  aria-hidden={true}
                  frameBorder={0}
                  src="about:blank"
                  style={
                    Object {
                      "display": "block",
                      "height": "100%",
                      "left": 0,
                      "opacity": 0,
                      "overflow": "hidden",
                      "pointerEvents": "none",
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": -1,
                    }
                  }
                  tabIndex={-1}
                />
                <div
                  aria-label="test label 0"
                  aria-orientation="vertical"
                  className="components-dropdown-menu__menu test-menu-class"
                  role="menu"
                >
                  <button
                    aria-describedby={null}
                    className="components-button components-dropdown-menu__menu-item is-active"
                    onClick={[Function]}
                    role="menuitem"
                    type="button"
                  >
                    ToolbarButton1
                  </button>
                  <button
                    aria-describedby={null}
                    className="components-button components-dropdown-menu__menu-item"
                    onClick={[Function]}
                    role="menuitem"
                    type="button"
                  >
                    ToolbarButton2
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ]
</div>
`;

exports[`ToolbarDropdown should render ToolbarDropdown 0: test--0 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle utils--components-dropdown-toggle"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="test label 0"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onClick={[Function]}
            tooltip="test label 0"
            type="button"
          >
            <span
              className="dashicon dashicons dashicons-admin-customizer"
            />
            <span
              className="components-dropdown-menu__indicator"
            />
          </button>
        </div>
      </div>
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ]
</div>
`;

exports[`ToolbarDropdown should render ToolbarDropdown 1: opened-dropdown--1 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle utils--components-dropdown-toggle test-class"
        >
          <button
            aria-describedby={null}
            aria-expanded={true}
            aria-haspopup="true"
            aria-label="test label 1"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onClick={[Function]}
            tooltip="test label 1"
            type="button"
          >
            <span
              className="dashicon dashicons dashicons-admin-customizer"
            />
            <span
              className="components-dropdown-menu__indicator"
            />
          </button>
          <div
            className="components-popover components-dropdown__content components-dropdown-button__popover utils--components-dropdown-button__popover is-without-arrow"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
          >
            <div
              className="components-popover__content"
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <iframe
                  aria-hidden={true}
                  frameBorder={0}
                  src="about:blank"
                  style={
                    Object {
                      "display": "block",
                      "height": "100%",
                      "left": 0,
                      "opacity": 0,
                      "overflow": "hidden",
                      "pointerEvents": "none",
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": -1,
                    }
                  }
                  tabIndex={-1}
                />
                <div
                  aria-label="test label 1"
                  aria-orientation="vertical"
                  className="components-dropdown-menu__menu"
                  role="menu"
                >
                  <button
                    aria-describedby={null}
                    className="components-button components-dropdown-menu__menu-item is-active"
                    onClick={[Function]}
                    role="menuitem"
                    type="button"
                  >
                    ToolbarButton3
                  </button>
                  <button
                    aria-describedby={null}
                    className="components-button components-dropdown-menu__menu-item"
                    disabled={true}
                    onClick={[Function]}
                    role="menuitem"
                    type="button"
                  >
                    ToolbarButton4
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ]
</div>
`;

exports[`ToolbarDropdown should render ToolbarDropdown 1: test--1 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle utils--components-dropdown-toggle test-class"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="test label 1"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onClick={[Function]}
            tooltip="test label 1"
            type="button"
          >
            <span
              className="dashicon dashicons dashicons-admin-customizer"
            />
            <span
              className="components-dropdown-menu__indicator"
            />
          </button>
        </div>
      </div>
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ]
</div>
`;

exports[`ToolbarDropdown should render ToolbarDropdown 2: test--2 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle utils--components-dropdown-toggle"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="test label 2"
            aria-pressed={false}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control has-text has-icon"
            disabled={true}
            onClick={[Function]}
            tooltip="test label 2"
            type="button"
          >
            <span
              className="dashicon dashicons dashicons-admin-customizer"
            />
            <span
              className="components-dropdown-menu__indicator"
            />
          </button>
        </div>
      </div>
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ]
</div>
`;

exports[`ToolbarDropdown should render ToolbarDropdown 3: test--3 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div>
          <button
            aria-describedby={null}
            aria-label="ToolbarButton7"
            aria-pressed={true}
            className="components-button components-toolbar__control toolbar-button-test7 is-pressed"
            data-toolbar-item={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          />
        </div>
      </div>
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ]
</div>
`;

exports[`ToolbarDropdown should render ToolbarDropdown 4: test--4 1`] = `
<div
  className="components-drop-zone__provider"
>
  Array [
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      />
    </div>,
  ]
  Array [
    Array [
      "",
      <div
        className="block-editor-block-list__layout is-root-container"
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                async={false}
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-describedby={null}
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>,
    ],
    Array [
      "",
      "",
    ],
    "",
  ]
</div>
`;
